<resources>
    <string name="app_name">gastos</string>
    <string name="distncia">Distância</string>
    <string name="preco">Preço</string>
    <string name="total_de_quilometros">Total de quilometros</string>
    <string name="preco_por_litro">Preço por Litro</string>
    <string name="autonomia">Autonomia</string>
    <string name="kms_por_litro">KMs por Litro</string>
    <string name="gasto_total">Seu gasto total sera de</string>
    <string name="calcular">CALCULAR</string>
    <string name="valor_total_RS">R$ 0</string>
</resources>